--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,6 @@ data-wow-delay="0.1s">
 </section>
 
 
-
 <!-- Contact Start -->
 <div class="container-xxl pb-5" id="contact">
     <div class="container py-5">
@@ -1267,8 +1266,7 @@ data-wow-delay="0.1s">
                 <p class="mb-4">Estoy aquí para realzar tu belleza. Permíteme crear un look personalizado que resalte
                     tus rasgos únicos. Contáctame y déjame cuidar de ti.</a></p>
                 <!-- <form action="https://formspree.io/f/mqkorylo" method="POST"> -->
-                <form action="<?php echo htmlspecialchars('formularioController.php'); ?>" method="POST">
-                    <!-- <form action="https://formsubmit.co/josecanahuate05@gmail.com" method="POST"> -->
+                     <form action="https://formsubmit.co/josecanahuate05@gmail.com" method="POST">
                     <input type="hidden" name="_template" value="table">
                     <div class="row g-3">
                         <div class="col-md-6">
@@ -1351,7 +1349,6 @@ data-wow-delay="0.1s">
 </div>
 <!-- Map End -->
 
-
 <!-- Copyright Start -->
 <div class="container-fluid bg-dark text-white py-4">
     <div class="container">
@@ -1362,8 +1359,6 @@ data-wow-delay="0.1s">
             <div class="col-md-6 text-center text-md-end">
                 Designed By <a class="border-bottom text-secondary" target="_blank"
                     href="https://www.instagram.com/tristardevelops/">Tristar Dev</a>
-                <!--                         <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
- -->
             </div>
         </div>
     </div>
@@ -1386,28 +1381,22 @@ data-wow-delay="0.1s">
         left: 20px;
         display: none;
         z-index: 999;
-        /* Asegura que el botón esté por encima de otros elementos */
     }
 
     .back-to-top i.bi-whatsapp {
         font-size: 30px;
-        /* Ajusta el tamaño según tus preferencias */
     }
-
-    /* Agrega aquí el resto de tus estilos */
 </style>
 <script>
     // BOTON WHATSAPP CONTRATA MIS SERVICIOS
     function redirigirWhatsApp() {
         var numeroTelefono = '+50763270029';
         var enlaceWhatsApp = 'https://wa.me/' + numeroTelefono + '?text=¡Hola! Me gustaría contratar tus servicios.';
-
-        // Abre WhatsApp en una nueva pestaña o ventana
         window.open(enlaceWhatsApp);
     }
 </script>
 <!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="lib/wow/wow.min.js"></script>
 <script src="lib/easing/easing.min.js"></script>
@@ -1418,12 +1407,12 @@ data-wow-delay="0.1s">
 <script src="lib/isotope/isotope.pkgd.min.js"></script>
 <script src="lib/lightbox/js/lightbox.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
+
+<!-- Isotope -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+
 </body>
 
 </html>
